update format file (W726)

--- a/formats/classical_greek_epic_narrative_memory_identity_complete.html
+++ b/formats/classical_greek_epic_narrative_memory_identity_complete.html
@@ -180,10 +180,11 @@
 </div>
 <h1 id="chapter-1">Chapter 1</h1>
 <h2 id="chapter-1-1"><strong>CHAPTER 1</strong></h2>
-<p>The salt was the first thing I remembered. Not the taste of it, but
-the smell—a sharp, wet tang that lived in the linen of my tunic, in the
-oiled ropes of the rigging, in the very breath of the men who pulled the
-oars. It was the smell of the world, and for ten years, it was mine.</p>
+<p>Odysseus remembers the wine-dark sea, the sting of salt, the ache of
+oars. But the man who returns wears his name like borrowed armor;
+Ithaca’s stones feel strange beneath his feet. The truth he carried home
+was not his own, but a story told by the waves, and he must now decide
+which man to believe.</p>
 <p>I stood at the <em>Aeolia</em>’s stern, my palms pressed flat against
 the sun-warmed cedar of the rail. The sea was a sheet of hammered bronze
 beneath the late afternoon sun, and our wake cut a white scar across its
